app-test/testdata/typesystem/neg/algebraic-type-invalid-assignment/check/adt.check
testdata/typesystem/neg/algebraic-type-invalid-assignment/src/adt.cal:11:22: error: Incompatible types; expected U but was T.
                u := t; // error
                     ^